Overflow fixed.

--- a/src/HomePage.css
+++ b/src/HomePage.css
@@ -1,11 +1,10 @@
 .container {
-  width: 100vw;
-  overflow: hidden;
+  width: 98vw;
   display: flex;
   flex-direction: column;
   place-items: center;
   justify-content: center;
-  margin-top: 40%;
+  margin-top: 10%;
   gap: 10px;
 }
 
